--- a/style.css
+++ b/style.css
@@ -31,3 +31,28 @@ header {
   padding: 0.5rem 1rem;
   color: #fff;
 }
+
+.search::placeholder {
+    color: #7378c5;
+  }
+  
+  .search:focus {
+    outline: none;
+    background-color: var(--primary-color);
+  }
+  
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .movie {
+    width: 300px;
+    margin: 1rem;
+    background-color: var(--secondary-color);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+  }
